# knowledgeag

./: .env.example  AGENTS.md  AGETNS.md  APPLY.md  CHANGE_LOG.md  README.md  config.json  config.json.example  pyproject.toml  test_doc.md
.agent/skills/code-review/: SKILL.md
data/raw/: demo_note.md  sample.md
data/storage/: knowledge.db  knowledgeag.sqlite3
docs/: AI_CHANGE_PROCESS.md  ARCHITECTURE_PRINCIPLES.md  CHANGE_LOG.example.md  CHANGE_LOG.md  HUMAN_REVIEW.md  PROJECT_CONTEXT.md  REQUIREMENTS.md  architecture.md
scripts/: ask_demo.py  evaluate_ingest_quality.py  ingest_demo.py
src/knowledge_agent/app/: config.py  container.py
src/knowledge_agent/domain/: contracts.py  enums.py  models.py
src/knowledge_agent/ingestion/: claim_generator.py  evidence_extractor.py  ingest_service.py  source_loader.py
src/knowledge_agent/retrieval/: claim_retriever.py  evidence_fetcher.py  trigger_rules.py  validation_service.py
src/knowledge_agent/runtime/: agent_app.py  agent_loop.py  prompt_builder.py  (+2 more)
tests/: test_app_config.py  test_card_organizer.py  test_code_card_types.py  test_end_to_end.py  test_evaluate_ingest_quality.py  test_evidence_quote_context.py  test_financial_card_types.py  test_ingest_demo.py  test_knowledge_agent_boundary.py  test_observability.py  test_paimonsdk_adapter.py  test_quality_metrics.py  test_source_coverage_checker.py  test_source_summary.py  test_source_versioning.py  test_task_review.py  test_topic_coverage_checker.py  test_trigger_rules.py
tests/test_data/: expected_test_doc.json  test_doc_out.json  test_doc_out_0430.json
(+70 files in other folders)
