[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeag-card"
version = "0.1.0"
description = "KnowledgeCard-first knowledge ingestion and retrieval framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.1",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "typing-extensions>=4.12.2",
  "pytest>=9.0.3",
]

[project.optional-dependencies]
paimon = [
  "paimonsdk @ git+https://github.com/bg668/paimon.git@main"
]

dev = [
  "pytest>=8.3.2",
]

[project.scripts]
knowledgeag-card = "knowledgeag_card.runtime.tui_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
